--- a/tech_doc/styles.css
+++ b/tech_doc/styles.css
@@ -1,65 +1,61 @@
 html {
   box-sizing: border-box;
-  width: 100vw;
-  height: 100vh;
 }
 
 * {
-  /* position: inherit; */
+  margin: 0px;
+  border: 1px solid royalblue;
 }
 
 /* styling navbar and decendants */
 
 #navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 0 0 50px 0;
   display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-content: stretch;
-  flex-wrap: wrap;
-  /* position: relative; */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
   font-family: "Courier New", Courier, monospace;
-  font-size: 1rem;
+  font-size: 1em;
   color: beige;
+  text-align: justify;
   background-color: brown;
-  width: 100%;
-  height: auto;
-  /* margin-bottom: 10px; */
+  width: 30vw;
+  height: 100vh;
 }
 h1 {
-  display: block;
-  text-align: left;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  width: 100%;
-  color: blanchedalmond;
-  padding: 0 20px;
+  padding: 20px 50px 0 50px;
+  text-align: center;
 }
 #navbar_p {
-  text-align: left;
-  font-weight: 800;
-  color: antiquewhite;
-  display: block;
-  width: 100%;
-  height: auto;
-  padding: 20px;
-  border: 2px solid red;
-  /* position: absolute;
-  top: 0;
-  left: 0; */
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding: 20px 50px 20px 50px;
+  text-align: justify;
+
 }
+
 #navbar_div {
+  position: relative;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  flex-wrap: nowrap;
   align-content: stretch;
+  width: 30vw;
+  padding: 50px 0;
 }
 
 .nav-link {
   color: aqua;
   text-decoration: none;
+  text-align: center;
   display: inline-block;
-  padding: 10px;
-  margin: 5px;
+  padding: 10px 20px;
+  border: 1px solid wheat;
 }
 .nav-link:hover {
   color: white;
@@ -70,26 +66,33 @@ h1 {
 /* styling main */
 
 #main-doc {
+  position: absolute;
+  top: 0;
+  right: 0;
   font-size: 1.5rem;
   background-color: bisque;
-  width: 100vw;
+  max-width: calc(100% - 30vw);
   height: auto;
 }
+.main-section:first-child {
+  padding: 100px 150px 25px 150px;
 
+}
 .main-section {
-  width: 100%;
+  width: initial;
   height: auto;
-  padding: 75px 50px;
+  padding: 25px 150px 25px 150px;
   margin: 0;
-  margin: 20px 10px;
   background-color: #c0bcbc;
 }
 
 h2 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: chocolate;
+  padding: 0 0 25px 0;
+  text-decoration: underline;
 }
-p {
+p:not(#navbar_p) {
   color: rgb(81, 75, 75);
   text-align: justify;
   text-indent: 2rem;
@@ -99,15 +102,29 @@ p {
   font-weight: 800;
   color: black;
 }
-
-#foot_div {
-  width: 100vw;
-  height: 100px;
-  background-color: darkgrey;
-  content: "";
+code {
+  display: block;
+  max-width: 75%;
+  margin: auto;
+  padding: 50px 25px 0 25px;
 }
 
-@media (max-width: 500px) {
+ul, ol {
+   display: block;
+  max-width: 75%;
+  margin: auto;
+  padding: 50px 25px 0 25px;
+}
+
+
+#foot_div {
+  width: 100%;
+  height: 200px;
+  background-color: darkgrey;
+  /* content: ""; */
+}
+
+/* @media (max-width: 500px) {
   #navbar {
     position: absolute;
     top: 0;
@@ -121,4 +138,4 @@ p {
     float: left;
     width: 30%;
   }
-}
+} */
