--- a/tech_doc/styles.css
+++ b/tech_doc/styles.css
@@ -4,7 +4,7 @@ html {
 
 * {
   margin: 0px;
-  border: 1px solid royalblue;
+  /* border: 1px solid royalblue; */
 }
 
 /* styling navbar and decendants */
@@ -13,30 +13,27 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  padding: 0 0 50px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: nowrap;
+  align-content: space-around;
   font-family: "Courier New", Courier, monospace;
   font-size: 1em;
   color: beige;
-  text-align: justify;
   background-color: brown;
-  width: 30vw;
+  width: 20vw;
   height: 100vh;
+  overflow: visible;
+  padding-bottom: auto;
 }
 h1 {
-  padding: 20px 50px 0 50px;
-  text-align: center;
+  padding: 25px 50px 0 50px;
 }
 #navbar_p {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding: 20px 50px 20px 50px;
-  text-align: justify;
-
+  font-size: 1em;
+  padding: 10px 50px 10px 50px;
 }
 
 #navbar_div {
@@ -44,18 +41,22 @@ h1 {
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
-  align-content: stretch;
-  width: 30vw;
-  padding: 50px 0;
+  justify-content: center;
+  align-items: stretch;
+  align-content: space-around;
+  width: 20vw;
+  height: auto;
+  padding-bottom: 25px;
+  overflow: scroll;
 }
 
 .nav-link {
+  font-size: 1em;
   color: aqua;
   text-decoration: none;
-  text-align: center;
-  display: inline-block;
-  padding: 10px 20px;
-  border: 1px solid wheat;
+  display: block;
+  padding: 15px 0px 15px 50px;
+  border-top: 1px solid wheat;
 }
 .nav-link:hover {
   color: white;
@@ -69,73 +70,215 @@ h1 {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 1.5rem;
+  font-size: 1rem;
   background-color: bisque;
-  max-width: calc(100% - 30vw);
+  max-width: calc(100% - 20vw);
   height: auto;
 }
 .main-section:first-child {
-  padding: 100px 150px 25px 150px;
-
+  padding: 50px;
 }
 .main-section {
   width: initial;
   height: auto;
-  padding: 25px 150px 25px 150px;
-  margin: 0;
+  padding: 25px 50px;
   background-color: #c0bcbc;
 }
 
 h2 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: chocolate;
-  padding: 0 0 25px 0;
-  text-decoration: underline;
+  font-family: "Comfortaa", cursive;
+  padding-bottom: 25px;
 }
 p:not(#navbar_p) {
+  font-family: "Montserrat", sans-serif;
   color: rgb(81, 75, 75);
-  text-align: justify;
-  text-indent: 2rem;
+  line-height: 1.2em;
+  padding: 15px 0;
 }
 
 .parag_header {
-  font-weight: 800;
-  color: black;
+  font-weight: 600;
+  display: inline-block;
 }
-code {
+code,
+ul,
+ol {
+  font-size: 0.85em;
   display: block;
-  max-width: 75%;
   margin: auto;
-  padding: 50px 25px 0 25px;
+  line-height: 1.5em;
 }
 
-ul, ol {
-   display: block;
+code {
+  background-color: #e2cece;
+  padding: 20px;
+  border-left: 5px solid darkgrey;
+  border-radius: 2.5px;
+  margin: 10px auto;
   max-width: 75%;
-  margin: auto;
-  padding: 50px 25px 0 25px;
 }
 
+li {
+  padding: 10px;
+  font-family: "Comfortaa", cursive;
+  font-size: 1em;
+  max-width: 80%;
+}
 
 #foot_div {
-  width: 100%;
-  height: 200px;
+  max-width: 100%;
+  max-height: auto;
   background-color: darkgrey;
-  /* content: ""; */
+  padding: 20px 5px;
+}
+#foot_div address {
+  text-align: center;
+}
+#foot_div p {
+  font-size: 0.75em;
+  margin: 0;
+  padding: 5px 10px;
 }
 
 /* @media (max-width: 500px) {
   #navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
+    width: 100vw;
+    height: 10vh;
   }
-}
+  #navbar_div {
+    position: initial;
+  }
+  #main-doc {
+    position: relative;
+    top: 10vh;
+    left: 0;
+    min-width: 100vw;
+    max-height: calc(100vh - 10vh);
+  }
+} */
 
 @media (min-width: 500px) and (max-width: 1000px) {
   #navbar {
-    position: absolute;
-    float: left;
-    width: 30%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    font-family: "Courier New", Courier, monospace;
+    font-size: 1em;
+    color: beige;
+    background-color: brown;
+    width: 20vw;
+    height: 100vh;
+    overflow: visible;
   }
-} */
+  h1 {
+    padding: 20px 40px 0 40px;
+  }
+  #navbar_p {
+    font-size: 1em;
+    padding: 10px 40px 10px 40px;
+  }
+
+  #navbar_div {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    justify-content: center;
+    align-content: space-around;
+    width: 20vw;
+    height: auto;
+    padding: 0;
+    overflow: scroll;
+  }
+
+  .nav-link {
+    font-size: 1em;
+    color: aqua;
+    text-decoration: none;
+    display: block;
+    padding: 15px 0px 15px 50px;
+    border-top: 1px solid wheat;
+  }
+  .nav-link:hover {
+    color: white;
+    background-color: goldenrod;
+    cursor: pointer;
+  }
+
+  /* styling main */
+
+  #main-doc {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1rem;
+    background-color: bisque;
+    max-width: calc(100% - 20vw);
+    height: auto;
+  }
+  .main-section:first-child {
+    padding: 50px;
+  }
+  .main-section {
+    width: initial;
+    height: auto;
+    padding: 25px 50px;
+    background-color: #c0bcbc;
+  }
+
+  h2 {
+    font-family: "Comfortaa", cursive;
+    padding-bottom: 25px;
+  }
+  p:not(#navbar_p) {
+    font-family: "Montserrat", sans-serif;
+    color: rgb(81, 75, 75);
+    line-height: 1.2em;
+    padding: 15px 0;
+  }
+
+  .parag_header {
+    font-weight: 600;
+    display: inline-block;
+  }
+  code,
+  ul,
+  ol {
+    font-size: 0.85em;
+    display: block;
+    margin: auto;
+    line-height: 1.5em;
+  }
+
+  code {
+    background-color: #e2cece;
+    padding: 20px;
+    border-left: 5px solid darkgrey;
+    border-radius: 2.5px;
+    margin: 10px auto;
+    max-width: 75%;
+  }
+
+  li {
+    padding: 10px;
+    font-family: "Comfortaa", cursive;
+    font-size: 1em;
+    max-width: 80%;
+  }
+
+  #foot_div {
+    width: 100%;
+    height: 200px;
+    background-color: darkgrey;
+  }
+}
