updated web_app folder

--- a/web_app/styles.css
+++ b/web_app/styles.css
@@ -2,18 +2,270 @@
 Your product landing page should have at least one media query
 Your product landing page should utilize CSS flexbox at least once */
 
-#nav-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
+:root {
+  --body-color: lightgrey;
+  --headerfooter-color: rgb(255, 255, 255);
+  --main-color: pink;
+  --section-color: darkgrey;
+  --form-color: grey;
+  --list-color: coral;
 }
-@media only screen and (max-width: 720px) {
-  #nav-bar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  }
+
+* {
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid blueviolet; */
+}
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1rem;
+  background-color: var(--body-color);
+  width: 80vw;
+  margin: auto;
 }
 #header {
+  background-color: var(--headerfooter-color);
+  width: 80vw;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
+  flex-shrink: 2;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
 }
+h1 {
+  flex-shrink: 3;
+  margin: 0 auto;
+  height: fit-content;
+  color: red;
+  text-align: center;
+  padding: 1rem;
+}
+#header > p {
+  flex-shrink: 2;
+  margin: 0 auto;
+  height: fit-content;
+  padding: 1rem;
+}
+
+#header-img {
+  max-width: 15%;
+  height: auto;
+  display: inline-block;
+  flex-shrink: 2;
+}
+
+#nav-bar {
+  max-width: fit-content;
+  display: block;
+  flex-shrink: 3;
+}
+#navbar-ul {
+  max-width: calc(100vw - 20vw);
+  list-style-type: none;
+  display: flex;
+  justify-content: center;
+  flex-shrink: inherit;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+li {
+  max-width: inherit;
+  padding: 1rem 2rem;
+  background-color: var(--list-color);
+  margin: 0 0.1rem;
+}
+.nav-link {
+  text-decoration: none;
+  color: brown;
+  text-align: center;
+  padding: inherit;
+  margin: inherit;
+}
+.nav-link:hover {
+  color: black;
+}
+
+main {
+  background-color: var(--main-color);
+  padding: 2rem 0;
+}
+section {
+  margin: 5rem auto;
+}
+.sub-heading {
+  text-align: center;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 2rem;
+  padding: 1rem 0;
+}
+.paragraph {
+  font-size: 1.75rem;
+  text-align: left;
+  width: 60%;
+  margin: 0 auto;
+}
+figure {
+  margin: 2rem auto;
+}
+video {
+  display: block;
+  margin: 2rem auto 0 auto;
+}
+figcaption {
+  font-size: 2rem;
+  text-align: center;
+}
+#skills-ul {
+  width: 60%;
+  margin: 5rem auto;
+}
+#skills-ul > li {
+  margin: 2rem auto;
+  font-size: 2rem;
+  font-weight: 600;
+}
+#skills-ul span {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+form {
+  width: 60%;
+  height: max-content;
+  background-color: var(--form-color);
+  margin: 2rem auto;
+  padding: 5rem 10rem;
+  border-radius: 0.5rem;
+}
+label {
+  font-size: 1.5rem;
+  display: inline-block;
+  text-align: left;
+  width: 50%;
+  padding: 1rem 0 0 0;
+  margin: 0 auto;
+}
+#forename,
+#surname,
+#email,
+#textarea {
+  font-size: 1.5rem;
+  width: 100%;
+  display: inline-block;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  margin: 1rem auto;
+}
+
+#submit {
+  display: block;
+  font-size: 2rem;
+  width: 60%;
+  background-color: aquamarine;
+  padding: 1.5rem;
+  margin: 2rem auto;
+  border-radius: 0.5rem;
+  border: 0;
+}
+#submit:hover {
+  background-color: aqua;
+  font-weight: 500;
+  color: rgb(44, 43, 43);
+}
+p {
+  font-size: 1.5rem;
+  text-align: center;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+#booking {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem 5rem;
+}
+
+#booking p {
+  min-width: 100%;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+#booking article {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 2rem 1rem;
+  background-color: var(--list-color);
+  width: 20%;
+  min-height: 10rem;
+  border-radius: 0.2rem;
+}
+article:hover {
+  background-color: var(--section-color);
+}
+article a {
+  text-decoration: none;
+  text-align: center;
+  color: black;
+}
+article h3 {
+  width: min-content;
+  font-size: 2rem;
+  padding: 2rem;
+  text-align: center;
+  outline: 0.25rem dashed burlywood;
+}
+article p {
+  font-size: 2rem;
+  padding: 1rem 0;
+  text-align: center;
+}
+.em {
+  display: block;
+  font-size: 2.5rem;
+  padding: 2rem 0;
+}
+.article-p {
+  font-size: 2.5rem;
+  color: wheat;
+}
+.booking {
+  min-width: 100%;
+}
+footer {
+  text-align: center;
+  font-size: 1.5rem;
+  margin: 0;
+  padding: 5rem 0;
+  background-color: var(--headerfooter-color);
+}
+#footer-ul {
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+}
+#footer-ul li {
+  font-size: 1.25rem;
+  padding: 0.15rem 0.25rem;
+  margin: 1rem 0.5rem;
+}
+footer > a {
+  text-decoration: none;
+  font-size: 1rem;
+}
+
+/* @media only screen and (max-width: 720px) {
+  #nav-bar {
+    position: absolute;
+    top: 0;
+  }
+} */
