--- a/web_app/styles.css
+++ b/web_app/styles.css
@@ -22,7 +22,6 @@ html {
 }
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1rem;
   background-color: var(--body-color);
   width: 80vw;
   margin: auto;
@@ -31,49 +30,55 @@ body {
   background-color: var(--headerfooter-color);
   width: 80vw;
   height: auto;
-  display: flex;
-  flex-wrap: wrap;
-  flex-shrink: 2;
-  justify-content: space-between;
-  align-items: center;
   position: relative;
 }
-h1 {
-  flex-shrink: 3;
+h1,
+#header p {
+  min-width: 60%;
+  display: inline-block;
   margin: 0 auto;
   height: fit-content;
-  color: red;
   text-align: center;
   padding: 1rem;
 }
-#header > p {
-  flex-shrink: 2;
-  margin: 0 auto;
-  height: fit-content;
-  padding: 1rem;
+#header h1 {
+  font-size: 4rem;
+  color: rgb(183, 57, 57);
+  max-width: 70%;
+  position: absolute;
+  top: 5rem;
+  left: 20%;
+}
+#header p {
+  font-size: 2.5rem;
+  color: black;
+  max-width: 70%;
+  position: absolute;
+  top: 10rem;
+  left: 20%;
 }
 
 #header-img {
-  max-width: 15%;
-  height: auto;
+  max-height: 20rem;
   display: inline-block;
-  flex-shrink: 2;
+  margin: 2rem;
 }
 
 #nav-bar {
   max-width: fit-content;
   display: block;
-  flex-shrink: 3;
 }
 #navbar-ul {
   max-width: calc(100vw - 20vw);
   list-style-type: none;
   display: flex;
   justify-content: center;
+  align-items: center;
   flex-shrink: inherit;
-  position: absolute;
-  bottom: 0;
-  right: 0;
+  position: fixed;
+  top: 0;
+  left: 25%;
+  margin: 0 auto;
 }
 li {
   max-width: inherit;
@@ -83,6 +88,7 @@ li {
 }
 .nav-link {
   text-decoration: none;
+  font-size: 1.5rem;
   color: brown;
   text-align: center;
   padding: inherit;
@@ -114,7 +120,7 @@ section {
 figure {
   margin: 2rem auto;
 }
-video {
+#video {
   display: block;
   margin: 2rem auto 0 auto;
 }
