--- a/web_app/styles.css
+++ b/web_app/styles.css
@@ -130,16 +130,22 @@ figcaption {
 }
 #skills-ul {
   width: 60%;
+  height: auto;
   margin: 5rem auto;
+  list-style: none;
+  /* list-style-image: url('fa-campfire'); */
 }
-#skills-ul > li {
+#skills-ul li {
   margin: 2rem auto;
   font-size: 2rem;
   font-weight: 600;
 }
-#skills-ul span {
+#skills-ul span.fa-solid {
   font-size: 1.5rem;
   font-weight: 400;
+  line-height: 2.5rem;
+  letter-spacing: 0.25rem;
+  margin-top: 1rem;
 }
 
 form {
