--- a/web_app/styles.css
+++ b/web_app/styles.css
@@ -192,11 +192,13 @@ label {
   border-radius: 0.5rem;
   border: 0;
 }
-#submit:hover {
+#submit:hover, .select:hover {
   background-color: aqua;
   font-weight: 500;
   color: rgb(44, 43, 43);
+  cursor: pointer;
 }
+
 p {
   font-size: 1.5rem;
   text-align: center;
@@ -207,23 +209,26 @@ p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  padding: 1rem 5rem;
+  padding: 1rem;
+}
+#booking * {
+  /* border: 2px solid rebeccapurple; */
 }
 
 #booking p {
   min-width: 100%;
   text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: 2rem;
 }
 #booking article {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  padding: 2rem 1rem;
+  padding: 5rem 2rem 1rem 2rem;
   background-color: var(--list-color);
   width: 20%;
-  min-height: 7.5rem;
+  min-height: 5rem;
   border-radius: 0.2rem;
 }
 article:hover {
@@ -258,6 +263,8 @@ article p {
 .booking {
   min-width: 100%;
 }
+
+/* footer */
 footer {
   text-align: center;
   font-size: 1.5rem;
